
2012-05-31 WooHyun Jung

       * child_can_focus should be EINA_FALSE only when all children in the object
         tree are not focusable. Before this fix, it was EINA_FALSE when all sub
         objects were not focusable. (i.e. didn't check whole object tree)

2012-06-01 Mike Blumenkrantz

        * Re-setting the current mirrored mode state no longer causes a full recalc

2012-06-07 Jaehwan Kim

        * Toolbar: Remove the APIs elm_toolbar_items_max_set/get.
	  Instead of them, add the APIs elm_toolbar_standard_priority_set/get.
	  The items which are lower than standard priority are located in more menu or panel.

2012-06-08 Jaehwan Kim

        * Add elm_object_scroll_hold/freeze_get. 

2012-06-12 ChunEon Park(Hermet)

        * Fixed Transit wipe effect flickering.

2012-06-12 Carsten Haitzler (The Rasterman)

	* Add elm_win_size_base_set/get, elm_win_size_step_set/get for hinting
        sizing of windows. Useful for terminals.

2012-06-12 Mike Blumenkrantz

        * Map no longer saves its files to directories outside of the user's home directory

2012-06-14 Seunggyun Kim

        * Fix elm_config_font_overlay_apply() to also apply rescaling properly.

2012-06-14 Jaehwan Kim

        * Toolbar : Add the reorder feature when the more panel is shown.
          After the item is long-pressed, it can be moved.

2012-06-14 Michael Bouchaud

	* Add an enum to Elm_Calendar_Mark_Repeat_Type:
	ELM_CALENDAR_LAST_DAY_OF_MONTH

2012-06-15 Michael Bouchaud

	* elm_progressbar: elm_progressbar_format_function_set to add a callback
	function to format the unit string.

2012-06-16 Davide Andreoli

	* elm_map: add elm_map_overlay_del_cb_set to be notify when
	an overlay is deleted.

2012-06-23 Daniel Willmann

        * elm_progressbar: Add "changed" signal to be emitted when the value
        is changed.

2012-06-25 Daniel Juyung Seo (SeoZ)

	* Genlist: Fixed tree expand bug. Check item type when an item is requested
	to be expanded/contracted.